force-app/main/default/objects/Assessment_Question__c/fields/Answer_Number__c.field-meta.xml
<CustomField>
    <fullName>Answer_Number__c</fullName>
    <label>Answer (Number)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>