force-app/main/default/objects/Assessment_Question__c/fields/Answer_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Answer_Picklist__c</fullName>
    <label>Answer (Picklist)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>