force-app/main/default/objects/Assessment_Question__c/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
                <default>true</default>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>True/False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>