force-app/main/default/objects/Assessment_Question__c/fields/Assessment_Question_Master__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Question_Master__c</fullName>
    <label>Assessment Question Master</label>
    <referenceTo>Ass_Ques_Master__c</referenceTo>
    <relationshipLabel>Assessment Questions</relationshipLabel>
    <relationshipName>Assessment_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>